--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
             width: 90%;
             max-width: 400px;
         }
+        *{
+            cursor:crosshair;
+        }
     </style>
 </head>
 <body>
@@ -106,7 +109,7 @@
                 canvas.appendChild(pixel);
             }
 
-            
+
         fetchPixels();
     </script>
 </body>
