--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             width: 100%;
             height: 80vh;
             border: 1px solid black;
-            cursor: pointer;
+            cursor: crosshair;
         }
         #quote-input {
             display: block;
@@ -26,9 +26,6 @@
             font-size: 1rem;
             width: 90%;
             max-width: 400px;
-        }
-        *{
-            cursor:crosshair;
         }
     </style>
 </head>
@@ -102,15 +99,24 @@
             pixel.style.left = `${gridX}px`;
             pixel.style.top = `${gridY}px`;
 
-            pixel.onclick = function() {
-                alert(pixelData.quote);
-                };
+            pixel.onclick = function(event) {
+                event.stopPropagation();
+                alert(quote);
+            };
 
-                canvas.appendChild(pixel);
+            canvas.appendChild(pixel);
+            setCookie("pixelCreated", "true", 365);
+        }
+
+        function handleClick(event) {
+            const target = event.target;
+            if (target === canvas) {
+                createPixel(event);
             }
+        }
 
-
-        fetchPixels();
+        canvas.addEventListener('click', handleClick);
     </script>
 </body>
 </html>
+
